changed:
  - internal function get.IDs() now uses new internal function
    filter.relevant.tags()
  - function rk.JS.scan() now has a new mode switch and supports scanning for
    <preview /> nodes
  - handling of previews was changed; using "doPrintout" is deprecated now,
    but still works. most scripts should still do without changes, allthough
    the JS code lokks different now
added:
  - new parameters "mode", "placement" and "active" in rk.XML.preview()
  - new parameter "preview" in rk.JS.doc() to force adding a preview()
    function
  - rk.plugin.component() and rk.plugin.skeleton() now support "preview" in
    both the "js" option and the "scan" option
  - new options "preview" and "level" in rk.JS.saveobj()

changes in version 0.08-1 (2015-12-17)
fixed:
  - attribute "max_precision" in <spinbox> was misspelled
  - rk.XML.connect() still handled modifiers for "governor" wrong if it
    wasn't a XiMpLe node
  - also fixed how rk.XML.convert() and rk.XML.switch() were handling
    modifier checking
  - rk.XML.dependencies() didn't know about min/max versions of pluginmaps
    (fixed in rk.XML.about() as well)
  - some fixes to the skeleton GUI and demo script
  - prevent internal function indent() from losing it over negative values
  - indentation of rk.paste.JS.graph() was incorrect
  - pasting comments via rk.paste.JS() gained an extra space for subsequent
    lines
  - the "i18n" attribute in lists e.g. for rk.XML.radio() didn't really work
  - improved indetation for rk.JS.oset objects
  - rk.XML.varslot() and rk.XML.valueslot() didn't correctly add sources if
    they were character strings (which is valid)
  - R.comment() didn't correctly paste indentation levels > 2
added:
  - new methods plugin2script() to try to translate raw plugin XML into
    working rkwarddev script calls
  - new option "ignore" enables rk.uniqueIDs() to not check nodes for
    duplicates (e.g., <copy>)
  - new wrapper function js() for id() makes it possible to use several